# so_pip

./: .dockerignore  .editorconfig  .env_example  .gitignore  .license_rules  .pre-commit-config.yaml  .pylintrc  .pynt  .so_pip.ini  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  build.py  build_old.py  go.py  install_so_pip_reqs.sh  integration_tests.sh  note.ipynb  pipx_installs.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.config/: .flake8  .license_rules  .pynt  requirements-dev.txt  requirements.txt  requirements_for_safety.txt
.github/workflows/: build.yml  build_push_image.yml  codeql-analysis.yml
dead_code/: Pipfile
dead_code/md/: post.md
docker/: Dockerfile  Dockerfile_local  build.sh  login.sh  run.sh  run_debug.sh
docs/: cli.md  comply_with_cc_sa.md  contributing.md  features.md  forking_joining.md  language_support.md  prior_art.md  scenarios.md  security.md  todo.md  workflows.md
examples/: README.md  make_examples.sh
examples/self_managed_packages/: .gitignore  README.md  install_so_pip.sh  vendorize_build.sh  vendorize_install.sh  vendorize_post.sh  vendorize_question.sh
examples/vendorize_to_src/: .so_pip.ini  README.md
examples/vendorize_to_src/example/: main.py
examples/vendorize_to_src/vendor_src/: .gitignore
navio_tasks/: settings.py  system_info.py  utils.py
navio_tasks/commands/: cli_pytest.py
navio_tasks/dependency_commands/: cli_jake.py  cli_pip.py
navio_tasks/mutating_commands/: cli_black.py  cli_jiggle_version.py
on_hold/: Pipfile
reports/: manifest_errors.txt  requirements.txt
scripts/: .so_pip.ini  all_in_one_candidates.py  detect_shell.py  get_related_tags.py  go_candidate.py  install_so_pip_reqs.sh  javascript_candidates.py  jupyter_style_candidate.py  lua_candidate.py  mass_harvest.py  one_and_done_candidate.py  ruby_candidate.py  ruby_things.py  try_it_out.py  vendorize_em.py
so_pip/: __init__.py  __main__.py  _version.py  changelog.py  code_transformations.py  external_commands.py  file_writing.py  language_guessing.py  main.py  make_from_template.py  model.py  module_maker.py  pypstats_facade.py  python_validator.py  requirements_for_post.py  settings.py  upgrade_to_py3.py
so_pip/_vendor/find_imports/: __init__.py  main.py
so_pip/_vendor/find_imports_cruft/: AUTHORS.txt  CHANGELOG.txt  CODE_OF_CONDUCT.txt  README.md  post.html  post.md  post.txt  setup.cfg  setup.py
so_pip/_vendor/find_imports_cruft/LICENSE/: CC BY-SA 2.5.txt
so_pip/api_clients/: cache_on_disk.py  pypstats_facade.py  pystackexchange_facade.py  search_engine_facade.py  stackapi_facade.py  stackoverflow_scraper.py  what_that_code_facade.py
so_pip/cli_clients/: external_commands.py  subprocess_utils.py
so_pip/commands/: freeze.py  list_all.py  search.py  show.py  uninstall.py  vendorize.py
so_pip/dog_food/find_imports/: CHANGELOG  main.py.bak
so_pip/infer_packages_needed/: .gitignore  README.md  package_by_name.py  parse_imports.py
so_pip/language_guessing/: codex_markers.py  election.py  extension_based.py  keyword_based.py  known_languages.py  language_guessing.py  parsing_based.py  regex_based.py  shebang_based.py  tag_based.py
so_pip/licenses/: CC BY-SA 2.0.html  CC BY-SA 2.0.txt  CC BY-SA 2.5.html  CC BY-SA 2.5.txt  convert_to_txt.py
so_pip/models/: authors_model.py  code_block_from_text.py  code_block_model.py  code_file_model.py  count_loc_in_post.py  python_package_model.py
so_pip/parse_code/: arbitrary_code_block.py  comment_out_anything.py  language_guessing.py  write_anything.py
so_pip/parse_python/: bad_words.txt  code_transformations.py  detect_python.py  format_code.py  make_name.py  make_notebook.py  make_reusable.py  module_maker.py  post_to_code.py  python_validator.py  upgrade_to_py3.py
so_pip/pypi_query/: main.py
so_pip/random_names/: bad_words.txt  clean_ten_k.txt  make_name.py
so_pip/random_names/etl/: bad_words.txt  clean_ten_k.txt  most-common-nouns-english.csv  reform_words.py
so_pip/support_files/: authors.py  changelog.py  code_of_conduct.py  generic_code_file.py  license.py  lua_rockspec.py  package_json.py  pyproject_toml.py  python_file.py  python_init.py  readme_md.py  requirements_for_post.py  ruby_gemspec.py  setup_cfg.py  setup_py.py
so_pip/templates/: AUTHORS.jinja  CODE_OF_CONDUCT.md.jinja  CODE_OF_CONDUCT.txt.jinja  CONTRIBUTING.md.jinja  HISTORY.md.jinja  HISTORY.rst.jinja  KeepAChangeLog.txt.jinja  README.md.jinja  code_of_conduct.html  generic_code_file.jinja  package.json.jinja  post.html.jinja  pyproject.toml.jinja  python_init.py.jinja  python_long_header.py.jinja  setup.cfg.jinja  setup.py.jinja
so_pip/templates/js/: package.json.jinja
so_pip/templates/lua/: alt_lua_rockspec.jinja  lua_rockspec.jinja
so_pip/templates/php/: composer.json.jinja
so_pip/templates/python/: pyproject.toml.jinja  python_brief_header.py.jinja  python_init.py.jinja  setup.cfg.jinja  setup.py.jinja
so_pip/templates/ruby/: ruby_gemspec.jinja
so_pip/update_any/: hash_files.py
so_pip/utils/: files_utils.py  guards.py  user_trace.py
so_pip_packages/find_imports/: main.py  main_lint.txt  question_1_.py
test/: AUTHORS.txt
test/sample/find_imports_a_aboriginal_dig/: __init__.py  answer.html  main_1.py  setup.py
test/sample/find_imports_a_collect_cursor/: CHANGELOG  __init__.py  answer.html  main_1.py  setup.py
test/so_pip_packages/foo_a_distinction_alaska/: AUTHORS  __init__.py  main.py  setup.py
test/test_fast/: test_detect_python.py  test_docopts.py  test_everything.py  test_external_commands_with_mocks.py  test_extract_authors.py  test_language_guessing.py  test_make_reusable.py  test_models.py  test_name_generator.py  test_parse_arbitrary.py  test_pypi_query.py  test_read_only_commands.py  test_stackapi_facade_with_mocks.py  test_support_files.py  test_transformations.py
test/test_slow/: AUTHORS.txt  CHANGELOG.md  test_api_clients.py  test_authors.py  test_change_log.py  test_docopts.py  test_live_search.py  test_models.py  test_parts.py  test_whole_thing.py
(+34 files in other folders)
