[tool.poetry]
name = "so_pip"
version = "0.1.0"
description = "Generate packages from Stackoverflow answers"
authors = ["Matthew Martin <matthewdeanmartin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
docopts = "*"

[tool.poetry.dev-dependencies]
pytest = "==5.3.5"
pytest-xdist = "*"
pytest-cov = "==2.8.1"
pydocstyle = "==5.0.2"
pycycle = "==0.0.8"
pynt = "==0.8.2"
pynt-contrib = "==0.2.0"
checksumdir = "==1.1.7"
requests = "==2.22.0"
dodgy = "==0.2.1"
gitchangelog = "==3.0.4"
psutil = "==5.6.7"
pebble = "==4.5.0"
python-dotenv = "==0.11.0"
gitpython = "*"
rope = "*"
"stopwatch.py" = "*"
pytest-timeout = "*"


[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

