[tool.poetry]
name = "so_pip"
version = "1.0.0"
description = "Generate packages from Stackoverflow answers"
authors = ["Matthew Martin <matthewdeanmartin@gmail.com>"]
keywords = ["packaging", "stackoverflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
include = [
    "so_pip/**/*.py",
    "so_pip/**/*.md",
    "so_pip/**/*.txt",
    "so_pip/**/*.html",
    "so_pip/**/*.jinja",
]
exclude = [
    "so_pip/_cache/*.html",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matthewdeanmartin/so_pip"
homepage = "https://github.com/matthewdeanmartin/so_pip"
documentation ="https://github.com/matthewdeanmartin/so_pip"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/matthewdeanmartin/so_pip/issues"
"Change Log" = "https://github.com/matthewdeanmartin/so_pip/blob/main/CHANGES.md"

[tool.poetry.scripts]
so_pip = 'so_pip.__main__:main'

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
# core functions
python-dotenv = ">=1.0.0"
diskcache = ">=5.6.3"
html2text = ">=2020.1.16"
jinja2 = ">=3.1.2"
pyrankvote = ">=2.0.6"

# api
requests = ">=2.31.0"
py-stackexchange = ">=2.2.7"
beautifulsoup4 = ">=4.12.2"
stackapi = ">=0.3.0"
search-engine-parser = ">=0.6.8"

# py tools
black = ">=23.10.1"
pipreqs = ">=0.4.13"
pyupgrade = ">=3.15.0"
2to3 = ">=1.0"
pyflakes = ">=3.1.0"
stdlib-list = ">=0.9.0"
pip-upgrader = ">=1.4.15"
pur = ">=7.3.1"
pypistats = ">=1.5.0"
pypinfo = ">=21.0.0"
vermin = ">=1.5.2"
astroid = ">=3.0.1"
# must pipx install, conflicts with tox
# safety = ">=2.3.5"

# Not just py
nbformat = ">=5.9.2"
markdown = ">=3.5.1"
toml = ">=0.10.2"
slpp-23 = ">=1.1"

# projects split out from so_pip
random-names = ">=0.2.0"
whats-that-code = ">=0.1.10"


[tool.poetry.dev-dependencies]
pytest = ">=6.0.1"
pytest-cov = ">=2.10.1"
vendorize = ">=0.3.0"
tox = ">=4.11.3"
types-requests = "*"
types-toml = "*"
types-markdown = "*"
mypy = ">=1.6.1"
pre-commit = ">=3.5.0"
ruff = ">=0.1.3"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts"]
# don't know how to do this in toml
#addopts = "--strict-markers"
#markers =
#	slow: marks tests as slow (deselect with '-m "not slow"')
#	fast: marks tests as fast (deselect with '-m "not fast"')

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["so_pip"]
line_length = 88
multi_line_output = 3
use_parentheses = true
