[metadata]
author = Matthew Dean Martin
author_email = matthewdeanmartin@gmail.com
classifiers =
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
description = Extract code from StackOverflow answer and converts to package format.
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
name = so_pip
project_urls =
	Source Code = https://github.com/matthewdeanmartin/so_pip
	Change Log = https://github.com/matthewdeanmartin/so_pip/blob/main/CHANGES.md
url = https://github.com/pypa/bandersnatch/
version = 0.1.2

[options]
install_requires =
	requests
	py-stackexchange
	beautifulsoup4
	python-dotenv
	pipreqs
	pyupgrade
	2to3
	html2text
	future
	pyflakes
	stdlib-list
	jinja2
	pypistats
	stackapi
	pip-upgrader
	pur
	pypistats
	pypinfo
	nbformat
	setuptools>40.0.0
	black
package_dir =
	=.
packages = find:
python_requires = >=3.8
include_package_data = True

[options.package_data]

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
	so_pip = so_pip.__main__:main

[flake8]
ignore = E722,W503,E126,E122,E131,E203,E231,C901,
	DAR101,DAR201,DAR101,D202,D200,D400,D205,DAR301
	Q000,C812,C819,
	WPS306,WPS305,WPS336, WPS400,WPS110,WPS114,
	WPS214,
	E800,G004,G003,C416
max-line-length = 88
enable-extensions = G
exclude = tests/*

[isort]
default_section = THIRDPARTY
force_grid_wrap = 0
include_trailing_comma = True
known_first_party = example,example_utils
line_length = 88
multi_line_output = 3
use_parentheses = True

[mypy]

[tool:pytest]
addopts = --strict-markers
markers =
	slow: marks tests as slow (deselect with '-m "not slow"')
	fast: marks tests as fast (deselect with '-m "not fast"')
junit_family = xunit1
norecursedirs = vendor scripts
