[metadata]
author =
author_email =
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Programming Language :: Python :: 3 :: Only
              Programming Language :: Python :: 3.6
              Programming Language :: Python :: 3.7
              Programming Language :: Python :: 3.8
              Programming Language :: Python :: 3.9
long_description = file:README.md
long_description_content_type = text/markdown
license = Programming Language :: Python :: 3 :: Only
          Programming Language :: Python :: 3.6
          Programming Language :: Python :: 3.7
          Programming Language :: Python :: 3.8
          Programming Language :: Python :: 3.9
license_file = LICENSE
name =
project_urls =
    Source Code =
    Change Log = https://stackoverflow.com/posts/26718306/revisions
url =
version =

[options]
install_requires =

package_dir =
    =
packages = find:
python_requires =

[options.packages.find]
where =
